Closed Bug 1394007 Opened 7 years ago Closed 7 years ago

signed/unsigned comparison warning in WindowsDllBlocklist.cpp

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

Details

(Whiteboard: [tor])

Attachments

(1 file)

      No description provided.
No longer blocks: 1330608
Blocks: 1394433
Comment on attachment 8901347 [details]
Bug 1394007 Fix a signedness comparison warning in WindowsDllBlocklist.cpp

https://reviewboard.mozilla.org/r/172810/#review178664

Let's compare against `ALL_VERSIONS` instead, if GCC will let you.
Attachment #8901347 - Flags: review?(dmajor)
Comment on attachment 8901347 [details]
Bug 1394007 Fix a signedness comparison warning in WindowsDllBlocklist.cpp

https://reviewboard.mozilla.org/r/172810/#review179474

Thanks!
Attachment #8901347 - Flags: review?(dmajor) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/ee27cdf041b3
Fix a signedness comparison warning in WindowsDllBlocklist.cpp r=dmajor
Keywords: checkin-needed
Pushed by kwierso@gmail.com:
https://hg.mozilla.org/mozilla-central/rev/24653fcb748c
Fix a signedness comparison warning in WindowsDllBlocklist.cpp r=dmajor
https://hg.mozilla.org/mozilla-central/rev/24653fcb748c
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: