Bug 1394007 Fix a signedness comparison warning in WindowsDllBlocklist.cpp r=dmajor

MozReview-Commit-ID: 3qH0PU2gBur

--HG--
extra : rebase_source : 6f2b51367462604cf3b6c53ce8a82722d926970d